2009-11-04  Dominik Röttsches  <dominik.roettsches@access-company.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=15914
        [GTK] Implement Unicode functionality using GLib

        Initial version of this patch by Jürg Billeter and Naiem Shaik.
        Patch 2/4 - Moving TextCodecs to GLib
        
        Added probing for a hard-coded lists of text encodings.
        The basis of this list is taken from the encodings supported by iconv,
        then extended by e.g. tis-620, windows-1251, euc-kr, windows-1253 and
        a number of Chinese ones.

        Probing is necessary with the current design of text codecs
        as iconv/GLib do not support enumerating available encodings.

        * GNUmakefile.am:
        * platform/ThreadGlobalData.cpp:
        (WebCore::ThreadGlobalData::ThreadGlobalData):
        (WebCore::ThreadGlobalData::~ThreadGlobalData):
        * platform/text/TextEncoding.cpp:
        (WebCore::TextEncoding::encode):
        * platform/text/TextEncodingRegistry.cpp:
        (WebCore::buildBaseTextCodecMaps):
        (WebCore::extendTextCodecMaps):
        * platform/text/gtk/TextCodecGtk.cpp: Added.
        (WebCore::):
        (WebCore::newTextCodecGtk):
        (WebCore::TextCodecGtk::isEncodingAvailable):
        (WebCore::TextCodecGtk::registerEncodingNames):
        (WebCore::TextCodecGtk::registerCodecs):
        (WebCore::TextCodecGtk::registerBaseEncodingNames):
        (WebCore::TextCodecGtk::registerBaseCodecs):
        (WebCore::TextCodecGtk::registerExtendedEncodingNames):
        (WebCore::TextCodecGtk::registerExtendedCodecs):
        (WebCore::TextCodecGtk::TextCodecGtk):
        (WebCore::TextCodecGtk::~TextCodecGtk):
        (WebCore::TextCodecGtk::releaseIConv):
        (WebCore::TextCodecGtk::createIConvDecoder):
        (WebCore::TextCodecGtk::createIConvEncoder):
        (WebCore::TextCodecGtk::decode):
        (WebCore::TextCodecGtk::encode):